--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <h1>Welcome to My ML & DS Projects</h1>
     <p>Explore my projects:</p>
     <ul>
-        <li><a href="house_price_prediction.html">House Price Prediction (Linear Regression)</a></li>
-        <li><a href="spam_classifier.html">Spam Email Classifier (Naïve Bayes)</a></li>
-        <li><a href="digit_recognition.html">Handwritten Digit Recognition (CNN)</a></li>
-        <li><a href="customer_segmentation.html">Customer Segmentation (K-Means Clustering)</a></li>
-        <li><a href="stock_prediction.html">Stock Market Prediction (LSTM)</a></li>
+        <li><a href="house_price_prediction.py">House Price Prediction (Linear Regression)</a></li>
+        <li><a href="spam_classifier.py">Spam Email Classifier (Naïve Bayes)</a></li>
+        <li><a href="digit_recognition.py">Handwritten Digit Recognition (CNN)</a></li>
+        <li><a href="customer_segmentation.py">Customer Segmentation (K-Means Clustering)</a></li>
+        <li><a href="stock_prediction.py">Stock Market Prediction (LSTM)</a></li>
     </ul>
 </body>
 </html>
